@@ -5,10 +5,13 @@ GCC_VER_MAJ:=$(shell expr `gcc -dumpversion | cut -f1 -d.`)
 GCC_PLUGIN_INC=/usr/lib/gcc/x86_64-linux-gnu/$(GCC_VER_MAJ)/plugin/include
 
 SELF_CFLAGS=-g -O3 -Wall
-SELF_CFLAGS+=-DUSE_NCURSES
+#SELF_CFLAGS+=-DUSE_NCURSES
+#SELF_CFLAGS+=-Wno-packed-not-aligned
+#SELF_CFLAGS+=-fno-omit-frame-pointer
+
 SELF_CFLAGS+=-DCONFIG_DEBUG_MODE=1
 
-SELF_CFLAGS+=-DCONFIG_ANALYSIS_THREAD=0x10
+SELF_CFLAGS+=-DCONFIG_ANALYSIS_THREAD=0x4
 #SELF_CFLAGS+=-DCONFIG_THREAD_STACKSZ=0x10*1024*1024
 
 #SELF_CFLAGS+=-DCONFIG_ID_VALUE_BITS=28
@@ -28,9 +31,6 @@ SELF_CFLAGS+=-DCONFIG_ANALYSIS_THREAD=0x10
 #SELF_CFLAGS+=-DCONFIG_MAX_SIZE_PER_FILE=0x8000000
 
 #SELF_CFLAGS+=-DCONFIG_SAVED_SRC="src.saved"
-
-#SELF_CFLAGS+=-Wno-packed-not-aligned
-SELF_CFLAGS+=-fno-omit-frame-pointer
 
 CFLAGS=-std=gnu11 $(SELF_CFLAGS) $(EXTRA_CFLAGS)
 CPPFLAGS=-std=gnu++11 $(SELF_CFLAGS) $(EXTRA_CFLAGS)
